--- a/djangoapp/blog/templates/blog/partials/_footer.html
+++ b/djangoapp/blog/templates/blog/partials/_footer.html
@@ -1,9 +1,9 @@
 <footer class="footer section-wrapper">
-    <div class="section-content-wide">
-      <div class="section-gap">
-        <div class="center">
-          <a href="#"> © Blog da June - Todos os direitos reservados. </a>
-        </div>
+  <div class="section-content-wide">
+    <div class="section-gap">
+      <div class="center">
+        <a href="#"> © {% now "Y" %} {{ site_setup.title }} - Todos os direitos reservados. </a>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
