--- a/djangoapp/blog/templates/blog/partials/_head.html
+++ b/djangoapp/blog/templates/blog/partials/_head.html
@@ -8,7 +8,8 @@
 {% if site_setup.favicon  %}
     <link rel="shortcut icon" href=" {{ site_setup.favicon.url }} " type="image/png">
 {% endif %}
-<title>TESTANDO</title>
+
+<title> {{ site_setup.title }} </title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
 integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
